[css-grid] Use min|max-sizes to compute flex fraction

The min|max-sizes must be used to compute the flex fraction for indefinite
free spaces. According to the spec "If using this flex fraction would cause
the grid to be smaller than the grid container’s min-width/height (or larger
than the grid container’s max-width/height), then redo this step, treating
the free space as definite and the available grid space as equal to the grid
container’s content box size when it’s sized to its min-width/height
(max-width/height)."

This only affects heights because during layout widths are properly
constrained by min|max-width restrictions.

BUG=660690

Review-Url: https://codereview.chromium.org/2480493002
Cr-Commit-Position: refs/heads/master@{#430654}

Former-commit-id: ee54fbc9b393d7d7b7e49f3f17f3178e817f2e94